kops/fsv.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2019-12-27T15:47:11Z"
  labels:
    run: test
  name: ser
  namespace: default
  resourceVersion: "8279"
  selfLink: /api/v1/namespaces/default/services/ser
  uid: 431206a7-c88b-4421-a323-00dfb40773b6
spec:
  clusterIP: 100.64.231.150
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30550
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: test
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
